--- a/src/style/index.css
+++ b/src/style/index.css
@@ -6,6 +6,15 @@
   text-align: right;
 }
 
+.inline {
+  display: inline-block;
+}
+
+.spacing-5 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .spacing-10 {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -32,4 +41,9 @@
   min-width: 800px;
   max-width: 1000px;
   white-space: pre-line;
+  padding-bottom: 200px;
+}
+
+.place-combo {
+  width: 200px;
 }
