--- a/src/style/index.css
+++ b/src/style/index.css
@@ -61,3 +61,11 @@
   padding-right: 5px;
   padding-left: 5px;
 }
+
+.red-text {
+  color: red;
+}
+
+.alert-thin-gutters {
+  padding: .5rem 1rem;
+}
