--- a/src/style/index.css
+++ b/src/style/index.css
@@ -69,3 +69,15 @@
 .alert-thin-gutters {
   padding: .5rem 1rem;
 }
+
+.unselectable {
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+label {
+  margin: 0;
+}
